--- a/staff_over_time.html
+++ b/staff_over_time.html
@@ -267,6 +267,12 @@
             });
         }
 
+        document.addEventListener('keypress', function (e) {
+            if (e.key === 'Enter') {
+                save();
+            }
+        });
+
     </script>
 
 </body>
