--- a/employee_take_money.html
+++ b/employee_take_money.html
@@ -253,6 +253,11 @@
             });
         }
 
+        document.addEventListener('keypress', function (e) {
+            if (e.key === 'Enter') {
+                save();
+            }
+        });
     </script>
 
 </body>
