--- a/staff_subtract.html
+++ b/staff_subtract.html
@@ -263,6 +263,12 @@
             });
         }
 
+        document.addEventListener('keypress', function (e) {
+            if (e.key === 'Enter') {
+                save();
+            }
+        });
+
     </script>
 
 </body>
