--- a/staff_take_money.html
+++ b/staff_take_money.html
@@ -251,6 +251,12 @@
             });
         }
 
+        document.addEventListener('keypress', function (e) {
+            if (e.key === 'Enter') {
+                save();
+            }
+        });
+
     </script>
 
 </body>
