--- a/supplier_home_recieve.html
+++ b/supplier_home_recieve.html
@@ -317,6 +317,12 @@
             });
         }
 
+        document.addEventListener('keypress', function (e) {
+            if (e.key === 'Enter') {
+                save_for_salem();
+            }
+        });
+
     </script>
 
 </body>
