--- a/home_page_employee.html
+++ b/home_page_employee.html
@@ -79,6 +79,9 @@
                                 <option value="2">رشيد</option>
                                 <option value="3">دمنهور</option>
                             </select>
+
+                            <a type="button" style="width:30%;" href='employee_day_summary.html'
+                                        class="btn btn-outline btn-primary btn-lg btn-block">البحث عن بضائع يوم محدد</a>
                             <table width="50%" id="myTable" dir="rtl"
                                 class="table table-striped table-bordered table-hover">
                                 <thead>
