--- a/main.html
+++ b/main.html
@@ -48,6 +48,9 @@
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
+            
+            <button style="float: left;margin-left: 50pt;" onclick="back()" class="btn btn-danger">تسجيل خروج </button>
+
             <div class="row">
                 <div class="col-lg-12" style="margin-right: 50pt;">
                     <img src="temp.png" style="display: block; margin: auto; width: 80;height: 80;" dir="ltr" width="700pt" />
@@ -179,4 +182,14 @@
 
 </body>
 
+<script>
+    if(localStorage.getItem('key') != "true"){
+    window.location.href = "home.html";
+}
+
+function back(){
+    localStorage.setItem('key', "false");
+    window.location.href = "home.html";
+    }
+</script>
 </html>
