--- a/staff_summry.html
+++ b/staff_summry.html
@@ -110,12 +110,54 @@
                                             </tr>
                                         </tbody>
                                     </table>
-
-                                    <button class="btn btn-primary" onclick="final()">تصفيه الحساب</button>
+                                    <h1 id="loading_price" style="color: red;" hidden> برجاء الانتظار</h1>
+                                    <button class="btn btn-primary" onclick="final()">تصفيه الحساب ( الخصومات والوقت الاضافى )</button>
+                                    <button class="btn btn-warning" style="margin-right: 5%;" onclick="removeExpensive()">تصفيه الحساب ( جميع المصروفات )</button>
+                                    <a data-target="#myModal" role="button" style="margin-right: 5%;" class="btn btn-danger"
+                                        data-toggle="modal">تصفيه مصروف شهر محدد</a>
                                 </div>
+                                
                             </div>
                             <!-- /.panel-body -->
                         </div>
+                        <div class="modal fade" id="myModal" tabindex="-1" role="dialog"
+                                aria-labelledby="myModalLabel" aria-hidden="true">
+
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <button type="button" class="close" data-dismiss="modal"
+                                                aria-hidden="true">×</button>
+                                            <h3 id="myModalLabel">هل انت متاكد من حذف مصروفات شهر</h3>
+                                        </div>
+                                        <div class="modal-body">
+                                            <select id="selector">
+                                                <option value="01">1</option>
+                                                <option value="02">2</option>
+                                                <option value="03">3</option>
+                                                <option value="04">4</option>
+                                                <option value="05">5</option>
+                                                <option value="06">6</option>
+                                                <option value="07">7</option>
+                                                <option value="08">8</option>
+                                                <option value="09">9</option>
+                                                <option value="10">10</option>
+                                                <option value="11">11</option>
+                                                <option value="12">12</option>
+                                            </select>
+                                        </div>
+                                        <div class="modal-footer">
+
+
+
+                                            <button class="btn" data-dismiss="modal" aria-hidden="true">الغاء</button>
+                                            <button class="btn btn-primary" style="margin-right: 80%;"
+                                                data-dismiss="modal" onclick="removePriceForMonth()">تاكيد</button>
+                                        </div>
+                                        
+                                    </div>
+                                </div>
+                            </div>
                         <!-- /.panel -->
                     </div>
                     <!-- /.col-lg-12 -->
@@ -213,12 +255,65 @@
             }
 
             function final() {
-                database.ref("staff").child(key).child('expenses').remove();
                 database.ref("staff").child(key).child('over_time').remove();
 
                 database.ref("staff").child(key).child('subtract').remove().then(function () {
                     location.reload();
                 });
+
+
+
+            }
+
+            function removeExpensive(){
+                database.ref("staff").child(key).child('expenses').remove();
+            }
+
+            function removePriceForMonth() {
+                document.getElementById("loading_price").style.display = "block"
+                var keysWillRemoved = []
+                var totalWillRemoved = 0
+                var msg = "سوف ستم حذف مبلغ قدره "
+                var selectedMonth = document.getElementById("selector").value;
+
+                database.ref('staff').child(key).child('expenses').once('value', function (snapshot) {
+                    snapshot.forEach(function (childSnapshot) {
+                        var childData = childSnapshot.val();
+                        if (childData.date.split("-")[1] == selectedMonth) {
+                            keysWillRemoved.push(childSnapshot.key)
+                            totalWillRemoved += parseFloat(childData.price)
+                        }
+
+                    });
+                    msg += totalWillRemoved
+                    msg += " عن شهر "
+                    msg += selectedMonth
+                    if (keysWillRemoved.length <= 0) {
+                        alert("لا يوجد مصاريف فى هذا الشهر")
+                        document.getElementById("loading_price").style.display = "none"
+                    } else {
+                        if (confirm(msg)) {
+                            // Save it!
+
+                            var map = {}
+                            while (keysWillRemoved.length > 0) {
+                                var currentKey = keysWillRemoved.pop()
+                                map[currentKey] = null
+                            }
+                            console.log(map);
+                            database.ref('staff').child(key).child('expenses').update(map).then(function () {
+                                location.reload();
+                            });
+
+                        }else {
+                            document.getElementById("loading_price").style.display = "none"
+                        }
+                    }
+
+                });
+
+
+
 
 
 
