--- a/home_page_employee.html
+++ b/home_page_employee.html
@@ -78,6 +78,7 @@
                                 <option value="1">الاسكندرية</option>
                                 <option value="2">رشيد</option>
                                 <option value="3">دمنهور</option>
+                                <option value="4">كفر الشيخ</option>
                             </select>
 
                             <a type="button" style="width:30%;" href='employee_day_summary.html'
