--- a/new_employee.html
+++ b/new_employee.html
@@ -73,6 +73,7 @@
                                                 <option value="1">الاسكندرية</option>
                                                 <option value="2">رشيد</option>
                                                 <option value="3">دمنهور</option>
+                                                <option value="4">كفر الشيخ</option>
                                             </select>
                                             </td>
                                         </tr>
