--- a/employee_home_send.html
+++ b/employee_home_send.html
@@ -136,7 +136,7 @@
                         <br />
                         <textarea style="width: 50%; height: 100pt;" id="note"></textarea>
                         <button onclick="saveNote(this)"> حفظ</button>
-                        <button onclick="deleteNote(this)"> حذف</button>
+                        <button onclick="deleteNote(this)" class="btn btn-danger"> حذف</button>
                         <div class="panel-body" dir="rtl">
                             <h1> البضاعة التى ارسلت للصنايعي </h1>
 
