--- a/supplier_home_recieve.html
+++ b/supplier_home_recieve.html
@@ -105,7 +105,7 @@
                                     </tr>
                                     <tr>
                                         <td><input style="font-size: 14pt;" id="dynamic_title"
-                                                class="form-control"></textarea></td>
+                                                class="form-control" placeholder="مصاريف اخرى"></textarea></td>
                                         <td><input onchange="onChangeType()" id="dynamic_value" type="number" value="0"
                                                 class="form-control"></textarea></td>
                                     </tr>
