--- a/supplier_home_recieve.html
+++ b/supplier_home_recieve.html
@@ -56,7 +56,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12" dir="rtl">
-                    <button style="float: left;" onclick="back()" class="btn btn-danger">رجوع </button>
+                    <button style="float: left;" onclick="back()"  id="back" class="btn btn-danger">رجوع </button>
 
                     <h2 id="name" style="text-align: center;"></h2>
                 </div>
@@ -68,7 +68,7 @@
                     <div class="panel panel-default">
 
                         <div class="table-responsive">
-                            <table style="width:70%;" id="mytable" class="table table-bordered table-striped">
+                            <table style="width:70%;" id="mytableInput" class="table table-bordered table-striped">
                                 <thead>
                                     <tr>
                                         <th></th>
@@ -131,8 +131,9 @@
 
                                 </tbody>
                             </table>
-                            <button type="button" style="width:30%;" id="save" onclick="save_for_salem()"
-                                class="btn btn-outline btn-primary btn-lg btn-block">حفظ</button>
+                            <button type="button" style="width:30%;" id="save" onclick="save()"
+                                    class="btn btn-outline btn-primary btn-lg btn-block">حفظ
+                            </button>
                         </div>
                         <!-- /.panel-heading -->
 
@@ -165,8 +166,12 @@
 
                                 </tbody>
                             </table>
+
                             <br />
                             <br />
+                            <button type="button" style="width:30%;"  id="printMyPage" onclick="printMyPage()"
+                                    class="btn btn-outline btn-primary btn-lg btn-block">طباعه
+                            </button>
                             <h1 hidden id="my_total" style="text-align: center;"></h1>
                             <br />
                             <br />
@@ -256,6 +261,20 @@
 
        
 
+function printMyPage() {
+
+
+
+          document.getElementById("mytableInput").style.display = "none";
+            document.getElementById("save").style.display = "none";
+            document.getElementById("back").style.display = "none";
+            print()
+            document.getElementById("mytableInput").style.display = "block";
+            document.getElementById("save").style.display = "block";
+            document.getElementById("back").style.display = "block";
+
+
+    }
         function save_for_salem() {
             var date = document.getElementById("date").value
             var dollar = document.getElementById("dollar").value
